Fix perf tests without WS cache and non connected mode